don't use .mjs, fix defaults of observed attrs

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@stevvvns/incomponent",
-  "version": "0.0.15",
+  "version": "0.0.16",
   "type": "module",
   "module": "src/index.js",
-  "main": "dist/main.mjs",
+  "main": "dist/main.js",
   "files": [
-    "dist/main.mjs",
+    "dist/main.js",
     "LICENSE"
   ],
   "license": "MIT",
   "scripts": {
     "example": "npx serve",
-    "build": "npx esbuild --bundle --format=esm --platform=browser --outfile=dist/main.mjs --minify src/index.js",
+    "build": "npx esbuild --bundle --format=esm --platform=browser --outfile=dist/main.js --minify src/index.js",
     "pub": "npm run build && npm publish --access=public",
     "lint": "npx eslint src --fix; npx prettier src --single-quote --write"
   },
